[package]
name = "ddc-i2c"
version = "0.2.1"
authors = ["arcnmx"]

description = "DDC/CI monitor control over I2C"
keywords = ["ddc", "mccs", "vcp", "vesa"]
categories = ["hardware-support", "api-bindings"]

documentation = "https://docs.rs/ddc-i2c"
repository = "https://github.com/arcnmx/ddc-i2c-rs"
readme = "README.md"
license = "MIT"

include = [
	"/src/**/*.rs",
	"/examples/**/*.rs",
	"/README*",
	"/COPYING*",
]

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
ddc = "0.2"
i2c = "0.1"
resize-slice = "0.1"

[target.'cfg(target_os = "linux")'.dependencies]
i2c-linux = { version = "0.1", features = ["i2c"], optional = true }

[dev-dependencies]
edid = "0.3"

[features]
with-linux-enumerate = ["i2c-linux", "i2c-linux/udev"]
with-linux = ["i2c-linux"]
